@@ -31,28 +31,9 @@ public GLib.Value ChildGetProperty (Gtk.Widget child, string property_name) {
 	return value;
 }
 
-[DllImport("libgtk-win32-2.0-0.dll")]
-static extern IntPtr gtk_container_get_children (IntPtr raw);
-
-public Widget[] Children {
-	get {
-		IntPtr list_ptr = gtk_container_get_children (Handle);
-		if (list_ptr == IntPtr.Zero)
-			return new Widget [0];
-
-		GLib.List list = new GLib.List (list_ptr);
-		Widget[] result = new Widget [list.Count];
-		for (int i = 0; i < list.Count; i++)
-			result [i] = list [i] as Widget;
-		return result;
-	}
-}
-
 public IEnumerator GetEnumerator ()
 {
-	IntPtr list_ptr = gtk_container_get_children (Handle);
-	GLib.List list = new GLib.List (list_ptr);
-	return list.GetEnumerator ();
+	return Children.GetEnumerator ();
 }
 
 class ChildAccumulator {
