@@ -1,5 +1,16 @@
 2008-08-20  Mike Kestner  <mkestner@novell.com>
 
+	* generator/ReturnValue.cs: use new ListPtrToArray marshaler for
+	lists with known element types.
+	* glib/Marshaller.cs: new ListPtrToArray marshaller with more
+	aggressive list disposal.
+	* gtk/Container.custom: remove manual Children impl.  Use Children
+	in GetEnumerator instead of pinvoking directly.
+	* gtk/Gtk.metadata: remove hidden attr and add element type and owned 
+	for Container.GetChildren to generate it properly.
+
+2008-08-20  Mike Kestner  <mkestner@novell.com>
+
 	Patch from Christian Hoff fixing bug #396195.
 	* generator/Property.cs: handle interface adapter values.
 	* generator/InterfaceGen.cs: register the gtype so mapping occurs
